@@ -295,7 +295,6 @@ $PERL subst scripts/rc.npcd
 $PERL subst scripts/check_pnp_rrds.pl 
 $PERL subst share/pnp/index.php 
 $PERL subst share/pnp/install.php 
-$PERL subst share/pnp/application/config/config.php 
 $PERL subst sample-config/httpd.conf
 $PERL subst sample-config/lighttpd.pnp4nagios.conf
 $PERL subst sample-config/nagios.cfg-sample
