@@ -1,6 +1,7 @@
 **pnp-0.6.6 ??/??/2010**
 
   * Bugfix: Fixed max amount of graphs per template 
+  * Bugfix: Autodetect PNP base URL
 
 **pnp-0.6.5 07/09/2010**
 
